--- a/.env.exemple
+++ b/.env.exemple
@@ -1,1 +1,5 @@
-RABBIT_DSN=
+RABBIT_DSN=amqp://guest:guest@rabbitmq/moltres
+
+RABBIT_EXCHANGE=hacka
+RABBIT_QUEUE=processo.data.init
+RABBIT_TOPIC=processo.data.init
