add envs rabbit

--- a/.env.exemple
+++ b/.env.exemple
@@ -1,5 +1,5 @@
 RABBIT_DSN=amqp://guest:guest@rabbitmq/moltres
 
 RABBIT_EXCHANGE=hacka
-RABBIT_QUEUE=processo.data.init
-RABBIT_TOPIC=processo.data.init
+RABBIT_QUEUE=process.data.init
+RABBIT_TOPIC=process.data.init
