--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@elastic/elasticsearch": "6.x",
     "@sentry/node": "5.4.0",
     "amqplib": "^0.5.3",
     "axios": "0.19.0",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@types/amqplib": "^0.5.12",
     "@types/dotenv": "^8.2.0",
+    "@types/elasticsearch": "^5.0.36",
     "@types/node": "12.0.7",
     "@types/uuid": "3.4.4",
     "@typescript-eslint/eslint-plugin": "1.10.2",
