--- a/.env.exemple
+++ b/.env.exemple
@@ -3,3 +3,4 @@ RABBIT_DSN=amqp://guest:guest@rabbitmq/moltres
 RABBIT_EXCHANGE=hacka
 RABBIT_QUEUE=process.data.init
 RABBIT_TOPIC=process.data.init
+ELASTIC_API=
